# sylpheed-spell

./: .gitignore  .travis.yml  COPYING  Makefile.am  NEWS  README  README.md  build.sh  configure.ac  sylspell.c  sylspell.h  tools-check-spelling.xpm
doc/: README.ja.txt
po/: ja.po  sylspell.pot
res/: tools-check-spelling-off.xpm
src/: Makefile.am  copying.h  sylspell.c  sylspell.h
